# challenges

./: CMakeLists.txt
3DSurfaceArea/: CMakeLists.txt
AttendingWorkshops/: CMakeLists.txt
ClimbingTheLeaderboard/: CMakeLists.txt
ClimbingTheLeaderboard/src/: main.cpp
CppClassTemplateSpecialization/: CMakeLists.txt
CppExceptionHandling/: CMakeLists.txt
CppVariadics/: CMakeLists.txt
CppVariadics/src/: main.cpp
Encryption/: CMakeLists.txt
Encryption/src/: main.cpp
FraudulentActivityNotifications/: CMakeLists.txt
HackerRank/: CMakeLists.txt
HackerRank/3DSurfaceArea/: CMakeLists.txt
HackerRank/AttendingWorkshops/: CMakeLists.txt
HackerRank/BitArray/: CMakeLists.txt
HackerRank/BitArray/tests/: testcase6.txt
HackerRank/ClimbingTheLeaderboard/: CMakeLists.txt
HackerRank/CppClassTemplateSpecialization/: CMakeLists.txt
HackerRank/CppExceptionHandling/: CMakeLists.txt
HackerRank/CppExceptionHandling/src/: main.cpp
HackerRank/Encryption/: CMakeLists.txt
HackerRank/FraudulentActivityNotifications/: CMakeLists.txt
HackerRank/LilysHomework/: CMakeLists.txt
HackerRank/Pairs/: CMakeLists.txt
HackerRank/QueensAttackII/tests/: testcase0.txt
HackerRank/RegExPatternsAndIntroToDatabases/src/: main.cpp
HackerRank/RunningTimeAndComplexity/src/: main.cpp
HackerRank/RunningTimeAndComplexity/tests/: testcase0.txt
HackerRank/SherlockAndAnagrams/: CMakeLists.txt
HackerRank/TheBombermanGame/src/: main.cpp
HackerRank/TheTimeInWords/: CMakeLists.txt
HackerRank/TravelAroundTheWorld/: CMakeLists.txt
HackerRank/TravelAroundTheWorld/src/: main.cpp
HackerRank/TravelAroundTheWorld/tests/: testcase3.txt
LilysHomework/: CMakeLists.txt
LilysHomework/src/: main.cpp
MessagesOrder/: CMakeLists.txt
MessagesOrder/src/: main.cpp
OrganizingContainersOfBalls/: CMakeLists.txt
OrganizingContainersOfBalls/src/: main.cpp
OrganizingContainersOfBalls/tests/: testcase0.txt
OverloadingOstreamOperator/: CMakeLists.txt
QueensAttackII/: CMakeLists.txt
QueensAttackII/src/: main.cpp
SherlockAndAnagrams/: CMakeLists.txt
SherlockAndAnagrams/src/: main.cpp
SherlockAndTheValidString/: CMakeLists.txt
SherlockAndTheValidString/src/: main.cpp
TheBombermanGame/: CMakeLists.txt
TheGridSearch/: CMakeLists.txt
TheGridSearch/src/: main.cpp
TheTimeInWords/: CMakeLists.txt
TravelAroundTheWorld/: CMakeLists.txt
TravelAroundTheWorld/tests/: mytestcase0.txt  testcase1.txt  testcase6.txt
hackerrank/3DSurfaceArea/: CMakeLists.txt
hackerrank/3DSurfaceArea/src/: main.cpp
hackerrank/AttendingWorkshops/: CMakeLists.txt
hackerrank/AttendingWorkshops/src/: main.cpp
hackerrank/BitArray/: CMakeLists.txt
hackerrank/BitArray/src/: main.cpp
hackerrank/ClimbingTheLeaderboard/: CMakeLists.txt
hackerrank/CppClassTemplateSpecialization/: CMakeLists.txt
hackerrank/CppClassTemplateSpecialization/src/: main.cpp
hackerrank/CppExceptionHandling/: CMakeLists.txt
hackerrank/CppVariadics/: CMakeLists.txt
hackerrank/Encryption/: CMakeLists.txt
hackerrank/FraudulentActivityNotifications/: CMakeLists.txt
hackerrank/FraudulentActivityNotifications/src/: main.cpp
hackerrank/LilysHomework/: CMakeLists.txt
hackerrank/MessagesOrder/: CMakeLists.txt
hackerrank/OrganizingContainersOfBalls/: CMakeLists.txt
hackerrank/OverloadingOstreamOperator/: CMakeLists.txt
hackerrank/OverloadingOstreamOperator/src/: main.cpp
hackerrank/Pairs/: CMakeLists.txt
hackerrank/Pairs/src/: main.cpp
hackerrank/QueensAttackII/: CMakeLists.txt
hackerrank/RegExPatternsAndIntroToDatabases/: CMakeLists.txt
hackerrank/RunningTimeAndComplexity/: CMakeLists.txt
hackerrank/SherlockAndAnagrams/: CMakeLists.txt
hackerrank/SherlockAndTheValidString/: CMakeLists.txt
hackerrank/TheBombermanGame/: CMakeLists.txt
hackerrank/TheGridSearch/: CMakeLists.txt
hackerrank/TheTimeInWords/: CMakeLists.txt
hackerrank/TheTimeInWords/src/: main.cpp
hackerrank/TravelAroundTheWorld/: CMakeLists.txt
hackerrank/TravelAroundTheWorld/tests/: testcase0.txt
ideone/: CMakeLists.txt
ideone/printer/: CMakeLists.txt
ideone/printer/src/: main.cpp
include/: CMakeLists.txt  debuglib.h
solution-templates/: CMakeLists.txt
solution-templates/hackerrank/: CMakeLists.txt
solution-templates/hackerrank/src/: main.cpp
