cmake_minimum_required (VERSION 2.6)

project(HackerRank)

add_subdirectory(TravelAroundTheWorld)
add_subdirectory(FraudulentActivityNotifications)
add_subdirectory(TheGridSearch)
add_subdirectory(OrganizingContainersOfBalls)
add_subdirectory(QueensAttackII)
add_subdirectory(3DSurfaceArea)
add_subdirectory(TheTimeInWords)
add_subdirectory(Encryption)
add_subdirectory(ClimbingTheLeaderboard)
add_subdirectory(TheBombermanGame)
add_subdirectory(LilysHomework)