cmake_minimum_required (VERSION 3.2)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

project(HackerRank)

add_subdirectory(TravelAroundTheWorld)
add_subdirectory(FraudulentActivityNotifications)
add_subdirectory(TheGridSearch)
add_subdirectory(OrganizingContainersOfBalls)
add_subdirectory(QueensAttackII)
add_subdirectory(3DSurfaceArea)
add_subdirectory(TheTimeInWords)
add_subdirectory(Encryption)
add_subdirectory(ClimbingTheLeaderboard)
add_subdirectory(TheBombermanGame)
add_subdirectory(LilysHomework)
add_subdirectory(SherlockAndTheValidString)
add_subdirectory(SherlockAndAnagrams)
add_subdirectory(CppVariadics)
add_subdirectory(MessagesOrder)
add_subdirectory(CppClassTemplateSpecialization)
add_subdirectory(CppExceptionHandling)
add_subdirectory(OverloadingOstreamOperator)