add_subdirectory(3DSurfaceArea)
add_subdirectory(AttendingWorkshops)
add_subdirectory(BitArray)
add_subdirectory(ClimbingTheLeaderboard)
add_subdirectory(CppClassTemplateSpecialization)
add_subdirectory(CppExceptionHandling)
add_subdirectory(CppVariadics)
add_subdirectory(Encryption)
add_subdirectory(FraudulentActivityNotifications)
add_subdirectory(LilysHomework)
add_subdirectory(MessagesOrder)
add_subdirectory(OrganizingContainersOfBalls)
add_subdirectory(OverloadingOstreamOperator)
add_subdirectory(QueensAttackII)
add_subdirectory(RegExPatternsAndIntroToDatabases)
add_subdirectory(RunningTimeAndComplexity)
add_subdirectory(SherlockAndAnagrams)
add_subdirectory(SherlockAndTheValidString)
add_subdirectory(TheBombermanGame)
add_subdirectory(TheGridSearch)
add_subdirectory(TheTimeInWords)
add_subdirectory(TravelAroundTheWorld)